Bug 74699 - weston git always crashes with nvidia 334.16 EGL/GLES implementation
Summary: weston git always crashes with nvidia 334.16 EGL/GLES implementation
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: 1.4.0
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-07 22:58 UTC by Mariusz Ceier
Modified: 2014-02-10 05:38 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
backtrace (6.49 KB, text/plain)
2014-02-07 22:58 UTC, Mariusz Ceier
Details

Description Mariusz Ceier 2014-02-07 22:58:02 UTC
Created attachment 93637 [details]
backtrace

When running weston -Bx11-backend.so with nvidia blob 334.16, weston crashes after outputing:

[23:57:03.870] weston 1.4.0
               http://wayland.freedesktop.org/
               Bug reports to: https://bugs.freedesktop.org/enter_bug.cgi?product=Wayland&component=weston&version=1.4.0
               Build: 1.4.0-64-g7407345 xdg-shell: Add set_margin request (2014-02-06 13:05:03 -0800)
[23:57:03.871] OS: Linux, 3.12.5-gentoo, #1 SMP PREEMPT Sun Dec 15 02:02:31 CET 2013, x86_64
[23:57:03.871] Using config file './weston.ini'
[23:57:03.871] Loading module '/home/mceier/usr/lib/weston/x11-backend.so'
[23:57:04.190] initializing x11 backend
[23:57:04.192] Loading module '/home/mceier/usr/lib/weston/gl-renderer.so'
[23:57:04.199] Using gl renderer
[23:57:04.199] launching '/home/mceier/usr/libexec/weston-keyboard'
[23:57:04.207] XCB-XKB not available during build
[23:57:04.212] Chosen EGL config details:
               RGBA bits: 8 8 8 8
               swap interval range: 0 - 200
[23:57:04.214] failed to create context
[23:57:04.214] EGL error state: EGL_BAD_ALLOC (0x3003)

Program received signal SIGSEGV, Segmentation fault.
Comment 1 Kristian Høgsberg 2014-02-10 05:38:33 UTC
Committed to master:

commit cbb915816249a68c34e8a290ca89c8aae669c461
Author: Mariusz Ceier <mceier+wayland@gmail.com>
Date:   Sat Feb 8 20:11:24 2014 +0100

    Don't crash when eglCreateContext fails
    
    eglCreateContext fails with every EGLConfig that
    nvidia blob 334.16 provides causing NULL pointer
    dereference in gl_renderer_destroy when destroying
    fragment and fan bindings.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=74699
    
    Signed-off-by: Mariusz Ceier <mceier+wayland@gmail.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.